updated swagger api
